# TrainToGain

./: .env  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
TrainToGain/: asgi.py  urls.py  wsgi.py
TrainToGain/apps/users/: admin.py  apps.py  constants.py  custom_exception.py  managers.py  models.py  permissions.py  regex_validators.py  serializer.py  tests.py  urls.py  views.py
TrainToGain/apps/utils/: helpers.py
TrainToGain/apps/workouts/: admin.py  apps.py  custom_exception.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
TrainToGain/settings/: __init__.py  development.py  settings.py
TrainToGain/settings/utils/: custom_exception_handler.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
ui/: index.html  package-lock.json  package.json
ui/src/: App.js  App.tsx  index.js  main.tsx
ui/src/components/: Autocomplete.js  CardModule.js  ChangeAccountDetails.js  ChangePassword.js  ChangePassword.tsx  CustomButton.tsx  CustomField.tsx  CustomLink.tsx  CustomModal.js  EditAccount.tsx  Header.js  ListView.js  ListWorkouts.js  Navbar.tsx  ShowPasswordProps.tsx  Theme.tsx  UserDrawer.tsx  WorkoutCard.tsx  WorkoutCardWorkoutContent.tsx  WorkoutsList.tsx
ui/src/css/: index.css
ui/src/interfaces/: ApiInterface.tsx
ui/src/pages/: CreateExercise.js  CreateWorkout.js  Home.js  Home.tsx  ListExercises.js  Login.js  MyAccountPage.js  PasswordReset.tsx  Register.js  SignIn.tsx  SignUp.tsx  UserPage.tsx  UserProfilePage.tsx  UserWorkoutsPage.tsx  WorkoutDetailsPage.tsx  (+2 more)
(+15 files in other folders)
